# ai-dev-runtime-protocol

./: .aidrpignore  .gitignore  AGENTS.md  LICENSE  ONBOARDING.md  README.md  pyproject.toml
.aidrp/: config.json  repo-map.json  repo-map.md
adapters/: python-fastapi-适配器.md  python-fastapi.md  react-node-monorepo-适配器.md  react-node-monorepo.md
docs/: architecture-架构说明.md  architecture.md
examples/: README.md
examples/scenarios/meeting-assistant/fixture/: README.md  pyproject.toml
examples/scenarios/meeting-assistant/fixture/design-system/: meeting-ui-tokens.json
examples/scenarios/meeting-assistant/fixture/src/: calendar_agent.py  event_store.py  meeting_assistant.py  ui_state.py
schemas/: cost-privacy-budget.schema.json  debug-pack.schema.json  decision-trace.schema.json  design-token-pack.schema.json  doc-sync.schema.json  domain-map.schema.json  engineering-review.schema.json  eval-case.schema.json  execution-plan.schema.json  observability-correlation.schema.json  product-review.schema.json  repo-map.schema.json  requirement-brief.schema.json  task-packet.schema.json  tool-contract.schema.json  workspace-config.schema.json
templates/: AGENTS.md.template  commit-message-提交信息.md  cost-privacy-budget-成本权限预算.md  debug-pack-排障包.md  debug-pack.md  design-token-pack-设计令牌包.md  discovery-interview-需求访谈.md  documentation-sync-文档同步包.md  domain-map-领域地图.md  eval-case-回归用例.md  eval-case.md  execution-plan-执行计划.md  observability-correlation-可观测性关联.md  plan-engineering-review-工程评审.md  plan-product-review-产品评审.md  prompts-提示词.md  prompts.md  qa-report-真实验收报告.md  (+6 more)
(+122 files in other folders)
