[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-assistant-fixture"
version = "0.1.0"
description = "Fixture project for AI Dev Runtime Protocol walkthrough"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
meeting-demo = "meeting_assistant:main"
